Revision history for exact::conf

{{$NEXT}}

1.07      2022-03-19 17:35:24-07:00 America/Los_Angeles
        - Minor documentation update

1.06      2022-01-14 12:01:34-08:00 America/Los_Angeles
        - Add ability to skip Config::App import

1.05      2021-01-13 11:14:16-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.04      2021-01-10 16:09:36-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.03      2019-08-26 15:14:29-07:00 America/Los_Angeles
        - Removed support for Perl versions prior to 5.14

1.02      2019-08-26 14:40:37-07:00 America/Los_Angeles
        - Changed to use "-" prepending flags for compile check w00t
        - Add back dist.ini components

1.01      2019-08-08 11:11:26-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.