@@ -50,4 +50,4 @@ issues = 1
 untracked_files = ignore
 
 [Prereqs]
-exact = 1.14
+exact = 1.23
