@@ -1,6 +1,8 @@
 Revision history for exact::conf
 
 {{$NEXT}}
+        - Remove redundant strict (since it's provided by exact)
+        - New import signature change required by exact v1.23
 
 1.07      2022-03-19 17:35:24-07:00 America/Los_Angeles
         - Minor documentation update
